2004-12-07  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/scripts/rtai-*.in: Force /bin/bash as interpreter.

2004-12-03  Philippe Gerum  <rpm@xenomai.org>

	* rtai-addons/serial/serial.c: Fix exports.

2004-12-01  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched/rtai/sched_lxrt.c: mark a schedling request only 
	if a task switch will really occur.

2004-11-26  Michael Neuhauser <mike@firmix.at>

        * rtai-core/sched/rtai/sys_lxrt.c: fixed copying more than needed 
	to get the arguments of an LXRT syscall.

2004-11-26  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/ipc/shm/shm.c: added missing #else macro in module
	initialization condition check for using VMALLOC.

        * rtai-core/malloc/malloc.c: added forgotten assignement of
	rtai_global_heap_adr.

2004-11-25  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade to 2.6/hal8.

	* rtai-core/arch/i386/hal/hal.c: Prepare for handling
	CONFIG_ADEOS_NOTHREADS. It still remains to get rid of any use of
	the private Adeos interface (e.g. __adeos_switch_to()) for being
	able to run over the r9 series.

2004-11-24  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/ipc/shm/shm.c: rt_shm_size did not return the mapped 
	user space address along with the related size.

2004-11-22  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/sched/rtai/sched_lxrt.c: warn hard kthreads
	have gone, changed deletion of kthreads in resorvoir.

        * rtai-core/ipc/sem/sem.c: ensured that tasks freed upon sem
	delation are run immediately

2004-11-17  Paolo Mantegazza  <mantegazza@aero.polimi.it>

        * rtai-core/ipc/msg/msg.c: fixed a missing resume time assignanement
        in rt_rpc_until.

2004-11-14  Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scilab/macros/RTAI: Modified Scicos library and
	modules for Peaks CAN interface.

2004-11-12  Michael Neuhauser <mike@firmix.at>
